---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary expr_has_concept_proc_call;\n\nfun test() {\n    Automaton(foo).wrong() has Concept;\n}\n\n"
input_file: tests/parser/test-data/expr-has-concept-proc-call.libsl
---
Err("encountered a syntax error at L6:27: mismatched input \'has\' expecting {SEMICOLON, \'==\', \'<\', \'>\', \'*\', \'/\', \'%\', \'+\', \'-\', \'!=\', \'<=\', \'>=\', \'&\', \'&&\', \'|\', \'||\', \'^\', \'is\', \'as\'}")
